fix(navbar): Vertically align extra logo using flexbox

--- a/frontend/src/app/ui/navbar/navbar.component.scss
+++ b/frontend/src/app/ui/navbar/navbar.component.scss
@@ -60,8 +60,10 @@ $mat-card-header-size: 40px !default;
 }
 
 .extra-logo {
-  margin-left: 5px;
-  height: 100%;
+    margin-left: 5px;
+    height: 100%;
+    display: flex;
+    align-items: center;
 }
 .logo-image {
 	height: min(100%, 60px);
